--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   font-style: normal;
   font-weight: normal;
   src: local("SF Pro Display"), url("fonts/sf-pro/SF-Pro-Display-Regular.otf") format("woff");
+  font-display: swap;
 }
 
 @font-face {
@@ -10,12 +11,14 @@
   font-style: normal;
   font-weight: bold;
   src: local("SF Pro Display Bold"), url("fonts/sf-pro/SF-Pro-Display-Bold.otf") format("woff");
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'SF Mono';
   font-weight: normal;
   src: local("SF Mono"), url("fonts/sf-mono/SFMono-Regular.otf") format("woff");
+  font-display: swap;
 }
 
 * {
