--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -34,6 +34,7 @@
             border-radius: 5px;
             object-fit: cover;
             width: 100%;
+            height: 100%;
         }
 
         &::after {
