--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -3,20 +3,18 @@
     font-style: normal;
     font-weight: normal;
     src: local('SF Pro Display'), url('fonts/sf-pro/SF-Pro-Display-Regular.otf') format('woff');
+    font-display: swap;
 }
 @font-face {
     font-family: 'SF Pro Bold';
     font-style: normal;
     font-weight: bold;
     src: local('SF Pro Display Bold'), url('fonts/sf-pro/SF-Pro-Display-Bold.otf') format('woff');
+    font-display: swap;
 }
 @font-face {
     font-family: 'SF Mono';
     font-weight: normal;
     src: local('SF Mono'), url('fonts/sf-mono/SFMono-Regular.otf') format('woff');
+    font-display: swap;
 }
-// @font-face {
-//     font-family: 'SF Mono Bold';
-//     font-weight: bold;
-//     src: local('SF Mono'), url('fonts/sf-mono/SFMono-Bold.otf') format('woff');
-// }
