--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -71,14 +71,11 @@
         li a {
             display: inline-block;
             padding: 20px;
+            color: var(--f-primary-2);
+            font-size: 1.5em;
+            transition: .3s ease;
 
-            i {
-                color: var(--f-primary-2);
-                font-size: 1.5em;
-                transition: .3s ease;
-            }
-
-            &:hover i {
+            &:hover {
                 color: var(--primary-2);
             }
         }
