--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import './styles/fonts';
+@import './styles/skeleton';
 
 * {
     box-sizing: border-box;
@@ -119,6 +120,9 @@ section {
     font-family: var(--sf-mono);
     font-weight: bold;
     padding: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media screen and (min-width: 480px) {
