--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -79,6 +79,7 @@
 .section-project-item .project-content .project-links a {
   color: var(--f-primary-1);
   font-size: 2em;
+  padding: 10px;
   -webkit-transition: .1s ease-in-out;
   transition: .1s ease-in-out;
 }
