--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -62,6 +62,7 @@
       a {
         color: var(--f-primary-1);
         font-size: 2em;
+        padding: 10px;
         transition: .1s ease-in-out;
 
         &:hover {
