--- a/src/App.scss
+++ b/src/App.scss
@@ -49,6 +49,7 @@ main {
     border-radius: 5px;
     transition: .3s ease;
     letter-spacing: 1px;
+    cursor: pointer;
 
     &.btn-primary {
         background-color: var(--primary-2);
