--- a/src/components/Education/Education.scss
+++ b/src/components/Education/Education.scss
@@ -62,13 +62,14 @@
 .education-navigator {
     display: flex;
     width: 100%;
+    margin-bottom: 20px;
 
     .education-tab {
         cursor: pointer;
         border: none;
         font-family: var(--sf-mono);
         flex: 1;
-        padding: 10px;
+        padding: 16px 10px;
         background-color: transparent;
         color: var(--f-primary-3);
         position: relative;
