--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -169,9 +169,10 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
-  margin: 20px 0;
+  width: 70px;
+  height: 40px;
+  padding: 22px;
+  margin: 20px;
 }
 
 /* Hide default HTML checkbox */
@@ -197,10 +198,10 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
+  height: 34px;
+  width: 34px;
   left: 4px;
-  bottom: 4px;
+  bottom: 5px;
   background-color: white;
   -webkit-transition: 0.4s;
   transition: 0.4s;
@@ -216,8 +217,8 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(28px);
+  transform: translateX(28px);
 }
 
 /* Rounded sliders */
