--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -57,7 +57,7 @@
           align-items: center;
 }
 
-.section-description-list li i {
+.section-description-list li svg {
   margin-right: 10px;
   color: var(--primary-2);
 }
