--- a/src/components/Education/Education.scss
+++ b/src/components/Education/Education.scss
@@ -37,7 +37,7 @@
         display: flex;
         align-items: center;
 
-        i {
+        svg {
             margin-right: 10px;
             color: var(--primary-2);
         }
