--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -82,6 +82,7 @@
 
 .section-about-content .section-description p .text-name {
   font-weight: bold;
+  letter-spacing: 1px;
   color: var(--f-primary-1);
 }
 
