--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -65,6 +65,7 @@
 
             .text-name {
                 font-weight: bold;
+                letter-spacing: 1px;
                 color: var(--f-primary-1);
             }
 
