--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -63,6 +63,10 @@
         margin-right: 30px;
 
         li {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
             button {
                 border: none;
                 cursor: pointer;
@@ -167,7 +171,7 @@
     content: "";
     height: 34px;
     width: 34px;
-    left: 4px;
+    left: 5px;
     bottom: 5px;
     background-color: white;
     -webkit-transition: 0.4s;
@@ -183,9 +187,7 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-    -webkit-transform: translateX(28px);
-    -ms-transform: translateX(28px);
-    transform: translateX(28px);
+    transform: translateX(26px);
 }
 
 /* Rounded sliders */
@@ -195,6 +197,17 @@ input:checked + .slider:before {
 
 .slider.round:before {
     border-radius: 50%;
+}
+
+.switch.desktop {
+    width: 60px;
+    height: 36px;
+    padding: 22px;
+    margin: 0;
+
+    input:checked + .slider:before {
+        transform: translateX(17px);
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -232,6 +245,15 @@ input:checked + .slider:before {
             li a {
                 font-size: 0.95em;
             }
+        }
+    }
+
+    .switch.desktop {
+        width: 68px;
+        margin: 0 20px;
+
+        input:checked + .slider:before {
+            transform: translateX(25px);
         }
     }
 }
