--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body.dark {
   --primary-1: #a4161a;
   --primary-2: #E84A4D;
   --primary-3: #ff5355;
-  --bg-primary-1: rgb(22, 26, 29);
+  --bg-primary-1: #161a1d;
   --bg-primary-1-shadow: rgba(2,12,27,0.7);
   --bg-primary-1-transparent: rgba(22, 26, 29, 0.8);
   --bg-primary-2: #1c191a;
