--- a/src/components/Education/Education.scss
+++ b/src/components/Education/Education.scss
@@ -55,7 +55,6 @@
         flex: 0 0 100%;
         position: relative;
         transition: .5s ease-in-out;
-        padding: 0 30px;
     }
 }
 
@@ -105,6 +104,14 @@
             &::after {
                 background-color: var(--primary-3);
             }
+        }
+    }
+}
+
+@media screen and (min-width: 425px) {
+    .education-content-container {
+        .education-content {
+            padding: 0 30px;
         }
     }
 }
